# sanctum

./: middleware.ts  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/agents/: page.tsx
app/agents/[agentId]/: page.tsx
app/agents/new/: page.tsx
app/api/admin/: route.ts
app/api/agents/: route.ts
app/api/agents/[agentId]/: route.ts
app/api/authorize/: route.ts
app/api/billing/: route.ts
app/api/escalations/: route.ts
app/api/escalations/[escalationId]/: route.ts
app/api/invites/: route.ts
app/api/settings/: route.ts
app/api/stats/: route.ts
app/api/transactions/: route.ts
app/api/transactions/[transactionId]/reverse/: route.ts
app/api/webhooks/stripe/: route.ts
app/api/workspaces/: route.ts
app/dashboard/: page.tsx
app/docs/: page.tsx
app/escalations/: page.tsx
app/login/: page.tsx
app/settings/: page.tsx
app/transactions/: page.tsx
app/transactions/[transactionId]/: page.tsx
components/: AgentCard.tsx  ApiPlayground.tsx  EscalationBanner.tsx  Sidebar.tsx  StatCard.tsx  StatusBadge.tsx  TransactionTable.tsx
lib/: apiSecurity.ts  auth.ts  authOptions.ts  jwt.ts  logger.ts  mongoClient.ts  mongodb.ts  rateLimit.ts  validate.ts  webhooks.ts
lib/models/: Agent.ts  Escalation.ts  Transaction.ts  User.ts  Webhook.ts  Workspace.ts
sdk/integrations/: crewai.py  langchain.py
sdk/node/: index.ts  package.json
sdk/python/: pyproject.toml
sdk/python/sanctum/: __init__.py  client.py
