[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctum-ai"
version = "0.1.0"
description = "Python SDK for Sanctum — AI agent transaction authorization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["sanctum", "ai", "agent", "authorization", "commerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://sanctum-tawny.vercel.app"
Repository = "https://github.com/YathuK/sanctum"
